@@ -99,6 +99,7 @@ Changed:
  - Add a short pickup delay for ejected items, can be configured on server
  - Can configure between item going directly into inventory and dropping item, default latter
 - Improved smoke shell detonation sound
+- Made shrapnel, grapeshot, and flak impact effect louder and added more particles
 Fixed:
 - Fixed invalid cannon propellant combinations due to spelling mistake in data pack folder name
 - Fixed cannon loader pushing without head
